--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,6 @@
     "name": "qb-extension",
     "version": "1.0.0",
     "action": {
-        "default_popup": "index.html"
+        "default_popup": "popup.html"
     }
 }
