--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@crxjs/vite-plugin": "^1.0.14",
     "@eslint/js": "^9.13.0",
     "@types/chrome": "^0.0.287",
