--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
+        "dev": "ENV=develop vite",
+        "build": "tsc -b && ENV=production vite build",
         "lint": "eslint .",
         "preview": "vite preview",
         "test": "vitest run --coverage"
@@ -23,6 +23,7 @@
         "@crxjs/vite-plugin": "^1.0.14",
         "@eslint/js": "^9.13.0",
         "@types/chrome": "^0.0.287",
+        "@types/node": "^22.10.1",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "@vitejs/plugin-react": "^4.3.3",
