--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@biomejs/biome": "1.9.4",
         "@crxjs/vite-plugin": "^1.0.14",
         "@eslint/js": "^9.13.0",
+        "@faker-js/faker": "^9.3.0",
         "@types/chrome": "^0.0.287",
         "@types/node": "^22.10.1",
         "@types/react": "^18.3.12",
